update done on user part

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "cSpell.words": [
+        "Adedokun",
+        "Airtel",
+        "Akinbisehin",
         "cupertino",
+        "Etisalat",
         "screenutil"
     ]
 }
