--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,20 @@ dependencies:
   provider: ^6.1.2
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.3
+  http: ^1.2.1
+  toastification: ^2.0.0
+  flutter_secure_storage: ^9.2.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/max4u_logo.png"
 
   
   flutter_lints: ^3.0.0
