--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   http: ^1.2.1
   toastification: ^2.0.0
   flutter_secure_storage: ^9.2.1
+  encrypt: ^5.0.3
+  dio: ^5.4.3+1
+  
 
 
 dev_dependencies:
