--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_secure_storage: ^9.2.1
   encrypt: ^5.0.3
   dio: ^5.4.3+1
+  json_annotation: ^4.8.0
   
 
 
@@ -35,6 +36,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 flutter_icons:
   android: true
