--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,11 @@ dependencies:
   dio: ^5.4.3+1
   json_annotation: ^4.8.0
   image_picker: ^1.1.1
+  intl: ^0.19.0
+  clipboard: ^0.1.3
+  shimmer_pro: ^0.0.6
+  shimmer: ^3.0.0
+ 
   
 
 
