--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   shimmer_pro: ^0.0.6
   shimmer: ^3.0.0
   webview_flutter: ^4.8.0
+  pdf: ^3.10.8
+  path_provider: ^2.1.3
+  open_file: ^3.3.2
  
   
 
