--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,6 +5,12 @@ allprojects {
     }
 }
 
+// dependencies{
+//     classpath 'com.google.gms:google-services:4.3.13'
+//     classpath 'com.android.tools.build:gradle:7.1.1'
+//     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+// }
+
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
