--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,13 @@ dependencies:
   file_picker: ^8.0.4
   printing: ^5.12.0
   local_auth: ^2.2.0
+  device_info_plus: ^10.1.0
+ 
+  connectivity_plus: ^6.0.3
+  firebase_messaging: ^15.0.1
+  firebase_core: ^3.1.0
+  upgrader: ^10.3.0
+  country_picker: ^2.0.26
   
 
 
