search feature implemented

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,9 +7,16 @@
        </intent>
     </queries>
   <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
   <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
   <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <!-- <service
+    android:name="com.example.myapp.PushNotificationService"
+    android:exported="false">
+    <intent-filter>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+    </intent-filter>
+    </service> -->
 
    <uses-permission android:name="android.permission.USE_BIOMETRIC"/>
    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
@@ -17,6 +24,14 @@
         android:label="max_4_u"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <!-- <service
+        android:name="com.google.firebase.messaging.FirebaseMessagingService"
+        android:exported="true">
+        <intent-filter>
+            <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+        </intent-filter>
+        </service> -->
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
