--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,5 @@
-allprojects {
+buildscript {
+    ext.kotlin_version = '2.0.0' 
     repositories {
         google()
         mavenCentral()
@@ -6,9 +7,9 @@ allprojects {
 }
 
 // dependencies{
-//     classpath 'com.google.gms:google-services:4.3.13'
-//     classpath 'com.android.tools.build:gradle:7.1.1'
+//     classpath 'com.android.tools.build:gradle:7.2.0'
 //     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+//     classpath 'com.google.gms:google-services:4.3.15'
 // }
 
 rootProject.buildDir = '../build'
@@ -22,3 +23,4 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
