--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
 
 
   cupertino_icons: ^1.0.6
-  flutter_screenutil: ^5.9.0
+  flutter_screenutil: ^5.9.3
   pin_code_fields: ^8.0.1
   prometheus_client_shelf: ^1.0.0+1
   provider: ^6.1.2
@@ -39,7 +39,7 @@ dependencies:
   image: ^4.2.0
   path: ^1.9.0
   file_picker: ^8.0.4
-  printing: ^5.12.0
+  #printing: ^5.12.0
   local_auth: ^2.2.0
   device_info_plus: ^10.1.0
  
