update done on UI and set prices section

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,8 @@ dependencies:
   upgrader: ^10.3.0
   country_picker: ^2.0.26
   url_launcher: ^6.3.0
-  flutter_local_notifications: ^17.2.1
+  flutter_local_notifications: ^17.2.2
+  rxdart: ^0.28.0
 
   
 
