--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   url_launcher: ^6.3.0
   flutter_local_notifications: ^17.2.2
   rxdart: ^0.28.0
+  internet_connection_checker: ^2.0.0
+
+
 
   
 
@@ -60,7 +63,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   build_runner: ^2.3.3
-  json_serializable: ^6.6.1
+
 
 flutter_icons:
   android: true
